Added style for activities, mobile responsivity

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -8,10 +8,12 @@
 @import "blocks/breadcrump"
 //Хлебные крошки//
 @import "blocks/hotel"
-//Стили hotel//
+//Стили для блока с инфой об отеле//
 @import "blocks/newsletter"
-//Стили newsletter//
+//Стили для блока обратной связи//
 @import "blocks/review"
-//Стили review
+//Стили блока с отзывами//
+@import "blocks/activities"
+//Стили для блока с активностями//
 @import "media"
 //Стили для мобильных устройств//
