--- a/css/main.css
+++ b/css/main.css
@@ -1090,6 +1090,70 @@ body {
   opacity: 0.8;
 }
 
+.activities {
+  padding: 60px 0 98px;
+}
+
+.activities__title {
+  margin: 0 0 57px;
+  font-size: 24px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
+.activities__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.activities .activity {
+  position: relative;
+  width: 255px;
+  height: 255px;
+}
+
+.activities .activity__img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 6px;
+}
+
+.activities .activity__text {
+  position: absolute;
+  left: 26px;
+  bottom: 24px;
+  color: #ffffff;
+}
+
+.activities .activity__descr {
+  display: block;
+  margin-bottom: 18px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.activities .activity__button {
+  padding: 7px 22px;
+  font-family: Nunito;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  text-decoration: none;
+  color: inherit;
+  border-radius: 4px;
+  background-color: #ec1f46;
+}
+
 @media (max-width: 1200px) {
   .container {
     width: 960px;
@@ -1099,6 +1163,13 @@ body {
   }
   .hotel__slider {
     width: 590px;
+  }
+  .activities .activity {
+    width: 230px;
+    height: 230px;
+  }
+  .activities .activity__text {
+    left: 18px;
   }
 }
 
@@ -1178,6 +1249,21 @@ body {
   }
   .reviews-slider__button_next {
     right: 0;
+  }
+  .activities {
+    padding-bottom: 50px;
+  }
+  .activities__content {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .activities .activity {
+    -ms-flex-preferred-size: 48.5%;
+        flex-basis: 48.5%;
+    margin-bottom: 20px;
+  }
+  .activities .activity__text {
+    left: 27px;
   }
 }
 
@@ -1306,6 +1392,21 @@ body {
   }
   .reviews-slider__button_next {
     right: 0;
+  }
+  .activities {
+    padding-bottom: 50px;
+  }
+  .activities__content {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .activities .activity {
+    -ms-flex-preferred-size: 48.5%;
+        flex-basis: 48.5%;
+    margin-bottom: 20px;
+  }
+  .activities .activity__text {
+    left: 20px;
   }
 }
 
@@ -1452,6 +1553,31 @@ body {
   .reviews-slider__button_next {
     top: 45px;
     right: 19%;
+  }
+  .activities {
+    padding: 40px 0 60px;
+  }
+  .activities__title {
+    margin-bottom: 36px;
+    font-size: 18px;
+    line-height: 23px;
+  }
+  .activities__content {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .activities .activity {
+    -ms-flex-preferred-size: auto;
+        flex-basis: auto;
+    width: 100%;
+    height: 255px;
+    margin-bottom: 20px;
+  }
+  .activities .activity:last-child {
+    margin-bottom: 0;
+  }
+  .activities .activity__text {
+    left: 26px;
   }
 }
 /*# sourceMappingURL=main.css.map */
