--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -6,6 +6,12 @@
                 width: 133px
     .hotel__slider
         width: 590px
+    .activities
+        .activity
+            width: 230px
+            height: 230px
+            &__text
+                left: 18px
 
 @media ( max-width: 992px )
     .container
@@ -61,6 +67,16 @@
                     left: 0
                 &_next
                     right: 0
+    .activities
+        padding-bottom: 50px
+        &__content
+            flex-wrap: wrap
+        .activity
+            flex-basis: 48.5%
+            margin-bottom: 20px
+            &__text
+                left: 27px
+
 @media ( max-width:759px)
     .container
         width: 576px
@@ -143,7 +159,16 @@
                     left: 0
                 &_next
                     right: 0
-            
+    .activities
+        padding-bottom: 50px
+        &__content
+            flex-wrap: wrap
+        .activity
+            flex-basis: 48.5%
+            margin-bottom: 20px
+            &__text
+                left: 20px    
+
 @media ( max-width: 619px )
     .container
         width: 90%
@@ -238,3 +263,20 @@
                 &_next
                     top: 45px
                     right: 19%
+    .activities
+        padding: 40px 0 60px
+        &__title
+            margin-bottom: 36px
+            font-size: 18px
+            line-height: 23px
+        &__content
+            flex-wrap: wrap
+        .activity
+            flex-basis: auto
+            width: 100%
+            height: 255px
+            margin-bottom: 20px
+            &:last-child
+                margin-bottom: 0
+            &__text
+                left: 26px
