--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -73,6 +73,7 @@
             flex-wrap: wrap
         .activity
             flex-basis: 48.5%
+            height: 255px
             margin-bottom: 20px
             &__text
                 left: 27px
@@ -165,6 +166,7 @@
             flex-wrap: wrap
         .activity
             flex-basis: 48.5%
+            height: 255px
             margin-bottom: 20px
             &__text
                 left: 20px    
