Fixed newsletter form

--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -44,7 +44,7 @@
             line-height: 18px
             border: none
             background-color: #f5fafe
-            color: #bdbdbd
+            color: $text-color
         &__button 
             position: absolute
             width: 65px
