Fixed newsletter txt

--- a/css/main.css
+++ b/css/main.css
@@ -917,7 +917,7 @@ body {
   line-height: 18px;
   border: none;
   background-color: #f5fafe;
-  color: #bdbdbd;
+  color: #333333;
 }
 
 .newsletter .subscribe__button {
