--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -51,8 +51,11 @@
             width: 700px
             padding: 92px 0 
     .reviews
+        padding: 40px 0 60px
         &__title
             margin: 0 0 50px 0
+            font-size: 30px
+            line-height: 38px
         &-slider
             &__item
                 width: 579px
@@ -140,12 +143,13 @@
             align-items: start
             width: 576px
             height: 320px
-            margin-bottom: 37px
             padding: 76px 20px 83px 
     .reviews
+        padding: 40px 0 50px
         &__title
             margin: 0 0 50px 0
-            font-size: 29px
+            font-size: 30px
+            line-height: 38px
         &-slider
             &__item
                 width: 100%
@@ -232,7 +236,6 @@
             align-items: start
             width: 90%
             height: 320px
-            margin-bottom: 37px
             padding: 76px 0 83px
         &__title
             font-size: 20px
@@ -248,6 +251,7 @@
         &__title
             margin: 0 0 42px 0
             font-size: 18px
+            line-height: 23px
         &-slider
             &__item
                 width: 100%
@@ -258,6 +262,7 @@
                     display: none
             &__text
                 max-width: 455px
+                text-align: left
             &__button
                 &_prev
                     top: 45px
