Added packages section, added style for packages

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -9,6 +9,8 @@
 //Хлебные крошки//
 @import "blocks/hotel"
 //Стили для блока с инфой об отеле//
+@import "blocks/packages"
+//Стили для блока с прочими отелями//
 @import "blocks/newsletter"
 //Стили для блока обратной связи//
 @import "blocks/review"
