--- a/css/main.css
+++ b/css/main.css
@@ -851,6 +851,173 @@ body {
   border: 0;
 }
 
+.packages {
+  padding: 40px 0 70px;
+}
+
+.packages__title {
+  margin: 0 0 65px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 45px;
+  text-transform: uppercase;
+  color: #333333;
+}
+
+.packages__grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: (max-content)[2];
+      grid-template-rows: repeat(2, -webkit-max-content);
+      grid-template-rows: repeat(2, max-content);
+  -webkit-column-gap: 30px;
+          column-gap: 30px;
+  row-gap: 30px;
+}
+
+.packages__item {
+  -ms-grid-rows: (1fr)[2];
+      grid-template-rows: repeat(2, 1fr);
+  max-height: 500px;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.packages__item_big {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (50%)[2];
+      grid-template-columns: repeat(2, 50%);
+}
+
+.packages .big-item__content {
+  -ms-grid-rows: (max-content)[6];
+      grid-template-rows: repeat(6, -webkit-max-content);
+      grid-template-rows: repeat(6, max-content);
+  padding: 46px 21px 30px 43px;
+  color: #ffffff;
+}
+
+.packages .big-item__content .stars {
+  margin-bottom: 6px;
+  font-size: 0;
+}
+
+.packages .big-item__content .stars .star {
+  width: 8px;
+  height: 8px;
+  margin-right: 2px;
+}
+
+.packages .big-item__content .stars .star:last-child {
+  margin-right: 0;
+}
+
+.packages .big-item__title {
+  margin: 0 0 27px;
+}
+
+.packages .big-item__description {
+  margin-bottom: 34px;
+  font-size: 14px;
+  line-height: 22px;
+}
+
+.packages .big-item__properties {
+  margin: 0 0 37px;
+}
+
+.packages__img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.packages__content {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (max-content)[4];
+      grid-template-rows: repeat(4, -webkit-max-content);
+      grid-template-rows: repeat(4, max-content);
+  padding: 30px 21px 25px 32px;
+  background-color: #0A223D;
+}
+
+.packages .content {
+  color: #ffffff;
+}
+
+.packages .content__title {
+  margin: 0 0 23px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+}
+
+.packages .content__price {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (50%)[2];
+      grid-template-columns: repeat(2, 50%);
+}
+
+.packages .content__price_new {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.packages .content__price_old {
+  margin-bottom: 5px;
+  font-size: 14px;
+  line-height: 18px;
+  text-decoration: line-through;
+}
+
+.packages .content__button {
+  padding: 10px 27px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 19px;
+  text-decoration: none;
+  text-align: center;
+  color: #ffffff;
+  border-radius: 4px;
+  background-color: #ec1f46;
+}
+
+.packages .properties {
+  margin-bottom: 24px;
+}
+
+.packages .properties__item {
+  margin-bottom: 11px;
+}
+
+.packages .properties__item:last-child {
+  margin-bottom: 0;
+}
+
+.packages .properties__icon {
+  vertical-align: middle;
+  width: 14px;
+  height: 14px;
+  margin-right: 14px;
+  fill: #ffffff;
+}
+
+.packages .properties__txt {
+  font-size: 12px;
+  line-height: 15px;
+  color: #ffffff;
+}
+
 .newsletter {
   position: relative;
 }
