--- a/css/main.css
+++ b/css/main.css
@@ -896,6 +896,11 @@ body {
       grid-template-columns: repeat(2, 50%);
 }
 
+.packages .big-item__wrapper {
+  width: 100%;
+  height: 500px;
+}
+
 .packages .big-item__content {
   -ms-grid-rows: (max-content)[6];
       grid-template-rows: repeat(6, -webkit-max-content);
@@ -920,7 +925,7 @@ body {
 }
 
 .packages .big-item__title {
-  margin: 0 0 27px;
+  margin: 0 0 27px !important;
 }
 
 .packages .big-item__description {
@@ -933,8 +938,14 @@ body {
   margin: 0 0 37px;
 }
 
+.packages__wrapper {
+  width: 100%;
+  height: 250px;
+}
+
 .packages__img {
   width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -945,7 +956,7 @@ body {
   -ms-grid-rows: (max-content)[4];
       grid-template-rows: repeat(4, -webkit-max-content);
       grid-template-rows: repeat(4, max-content);
-  padding: 30px 21px 25px 32px;
+  padding: 28px 21px 23px 32px;
   background-color: #0A223D;
 }
 
@@ -994,6 +1005,7 @@ body {
 
 .packages .properties {
   margin-bottom: 24px;
+  font-size: 0;
 }
 
 .packages .properties__item {
@@ -1013,6 +1025,7 @@ body {
 }
 
 .packages .properties__txt {
+  vertical-align: middle;
   font-size: 12px;
   line-height: 15px;
   color: #ffffff;
