--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -24,6 +24,9 @@
             display: grid
             grid-template-columns: repeat(2, 50%)
     .big-item
+        &__wrapper
+            width: 100%
+            height: 500px
         &__content
             grid-template-rows: repeat(6, max-content)
             padding: 46px 21px 30px 43px
@@ -37,21 +40,25 @@
                     margin-right: 2px
                     &:last-child
                         margin-right: 0
-        &__title
-            margin: 0 0 27px
+        &__title 
+            margin: 0 0 27px !important
         &__description
             margin-bottom: 34px
             font-size: 14px
             line-height: 22px
         &__properties
             margin: 0 0 37px
+    &__wrapper
+        width: 100%
+        height: 250px
     &__img
         width: 100%
+        height: 100%
         object-fit: cover
     &__content
         display: grid
         grid-template-rows: repeat(4, max-content)
-        padding: 30px 21px 25px 32px
+        padding: 28px 21px 23px 32px
         background-color: #0A223D
     .content
         color: $color-w
@@ -84,6 +91,7 @@
             background-color: $primary
     .properties
         margin-bottom: 24px
+        font-size: 0
         &__item
             margin-bottom: 11px
             &:last-child
@@ -95,6 +103,8 @@
             margin-right: 14px
             fill: $color-w
         &__txt
+            vertical-align: middle
             font-size: 12px
             line-height: 15px
             color: $color-w
+    
