--- a/css/main.css
+++ b/css/main.css
@@ -881,7 +881,7 @@ body {
 .packages__item {
   -ms-grid-rows: (1fr)[2];
       grid-template-rows: repeat(2, 1fr);
-  max-height: 500px;
+  height: 500px;
   border-radius: 8px;
   overflow: hidden;
 }
@@ -1409,6 +1409,19 @@ body {
   .hotel-wrapper .map {
     width: 340px;
   }
+  .packages__grid {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: (max-content)[3];
+        grid-template-rows: repeat(3, -webkit-max-content);
+        grid-template-rows: repeat(3, max-content);
+    grid-gap: 20px;
+  }
+  .packages__title {
+    margin-bottom: 50px;
+    font-size: 30px;
+    line-height: 38px;
+  }
   .newsletter__wrapper {
     width: 700px;
     padding: 92px 0;
@@ -1547,6 +1560,37 @@ body {
   }
   .hotel-wrapper .map {
     width: 100%;
+  }
+  .packages__grid {
+    -ms-grid-columns: (100%)[1];
+        grid-template-columns: repeat(1, 100%);
+    -ms-grid-rows: (250px)[5];
+        grid-template-rows: repeat(5, 250px);
+  }
+  .packages__item {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (50%)[2];
+        grid-template-columns: repeat(2, 50%);
+    -ms-grid-rows: (100%)[1];
+        grid-template-rows: repeat(1, 100%);
+    height: 250px;
+  }
+  .packages__item_big {
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .packages .big-item__wrapper {
+    height: 250px;
+  }
+  .packages .big-item__content {
+    padding: 27px;
+  }
+  .packages .big-item .stars {
+    display: none;
+  }
+  .packages .big-item__description {
+    display: none;
   }
   .newsletter__wrapper {
     -webkit-box-orient: vertical;
