--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -46,6 +46,15 @@
                 padding: 27px 22px
             .map
                 width: 340px
+    .packages
+        &__grid
+            grid-template-columns: repeat(2, 1fr)
+            grid-template-rows: repeat(3, max-content)
+            grid-gap: 20px
+        &__title
+            margin-bottom: 50px
+            font-size: 30px
+            line-height: 38px
     .newsletter
         &__wrapper
             width: 700px
@@ -137,6 +146,26 @@
             .map
                 
                 width: 100%
+    .packages
+        &__grid
+            grid-template-columns: repeat(1, 100%)
+            grid-template-rows: repeat(5, 250px)
+        &__item
+            display: grid
+            grid-template-columns: repeat(2, 50%)
+            grid-template-rows: repeat(1, 100%)
+            height: 250px
+            &_big
+                grid-column: 1
+        .big-item
+            &__wrapper
+                height: 250px
+            &__content
+                padding: 27px
+            .stars
+                display: none
+            &__description
+                display: none
     .newsletter
         &__wrapper
             flex-direction: column
