--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -16,7 +16,7 @@
         row-gap: 30px
     &__item
         grid-template-rows: repeat(2, 1fr)
-        max-height: 500px
+        height: 500px
         border-radius: 8px
         overflow: hidden    
         &_big
