--- a/css/main.css
+++ b/css/main.css
@@ -925,7 +925,7 @@ body {
 }
 
 .packages .big-item__title {
-  margin: 0 0 27px !important;
+  margin: 0 0 27px;
 }
 
 .packages .big-item__description {
@@ -1739,6 +1739,37 @@ body {
   .hotel-wrapper .map {
     width: 100%;
     height: 179px;
+  }
+  .packages__grid {
+    -ms-grid-rows: (420px)[5];
+        grid-template-rows: repeat(5, 420px);
+  }
+  .packages__title {
+    font-size: 18px;
+    line-height: 23px;
+  }
+  .packages__item {
+    -ms-grid-columns: (100%)[1];
+        grid-template-columns: repeat(1, 100%);
+    -ms-grid-rows: 50% 50%;
+        grid-template-rows: 50% 50%;
+    height: 420px;
+  }
+  .packages__content {
+    padding: 10px 15px;
+  }
+  .packages .content__title {
+    font-size: 16px;
+    line-height: 20px;
+    margin: 0 0 15px;
+  }
+  .packages .big-item__title {
+    font-size: 16px;
+    line-height: 20px;
+    margin: 0 0 15px;
+  }
+  .packages .big-item__content {
+    padding: 10px 15px;
   }
   .newsletter__wrapper {
     -webkit-box-orient: vertical;
