--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -259,6 +259,30 @@
             .map
                 width: 100%
                 height: 179px
+    .packages
+        &__grid
+            grid-template-rows: repeat(5, 420px)
+        &__title
+            font-size: 18px
+            line-height: 23px
+        &__item
+            grid-template-columns: repeat(1, 100%)
+            grid-template-rows: 50% 50%
+            height: 420px
+        &__content
+            padding: 10px 15px
+        .content
+            &__title
+                font-size: 16px
+                line-height: 20px
+                margin: 0 0 15px
+        .big-item
+            &__title
+                font-size: 16px
+                line-height: 20px
+                margin: 0 0 15px
+            &__content
+                padding: 10px 15px
     .newsletter
         &__wrapper
             flex-direction: column
