--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -41,7 +41,7 @@
                     &:last-child
                         margin-right: 0
         &__title 
-            margin: 0 0 27px !important
+            margin: 0 0 27px
         &__description
             margin-bottom: 34px
             font-size: 14px
