--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -271,6 +271,8 @@
             height: 420px
         &__content
             padding: 10px 15px
+        &__wrapper
+            height: 100%
         .content
             &__title
                 font-size: 16px
@@ -281,6 +283,8 @@
                 font-size: 16px
                 line-height: 20px
                 margin: 0 0 15px
+            &__wrapper
+                height: 100%
             &__content
                 padding: 10px 15px
     .newsletter
