--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -23,6 +23,18 @@
             grid-column: 1/3
             display: grid
             grid-template-columns: repeat(2, 50%)
+    &__offer
+        position: absolute
+        z-index: 1
+        left: 0
+        top: 26px
+        padding: 8px 12px
+        font-weight: 600
+        font-size: 12px
+        line-height: 15px
+        color: $color-w
+        background-color: $primary
+        border-radius: 0 4px 4px 0
     .big-item
         &__wrapper
             width: 100%
@@ -49,6 +61,7 @@
         &__properties
             margin: 0 0 37px
     &__wrapper
+        position: relative
         width: 100%
         height: 250px
     &__img
