--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -21,7 +21,7 @@
             .logo
                 width: 133px
             .search
-                margin-left: 8%
+                margin-left: 7%
                 &__input
                     width: 340px
     .navbar-bottom
@@ -208,7 +208,7 @@
     .container
         width: 90%
         .navbar-top
-            padding: 28px 0
+            padding: 27px 0
             .logo
                 width: 100px
             .search, .user
@@ -244,6 +244,7 @@
             display: none
         &-grid
             flex-direction: column
+            padding-top: 18px
         &__slider
             max-width: 100%
             height: 179px
@@ -258,7 +259,7 @@
                     padding: 13px 54px
             .map
                 width: 100%
-                height: 179px
+                height: 172px
     .packages
         &__grid
             grid-template-rows: repeat(5, 420px)
@@ -323,10 +324,10 @@
             &__button
                 &_prev
                     top: 45px
-                    left: 19%
+                    left: 17%
                 &_next
                     top: 45px
-                    right: 19%
+                    right: 17%
     .activities
         padding: 40px 0 60px
         &__title
