--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -137,6 +137,9 @@
                 &__txt
                     font-size: 10px
                     line-height: 14px
+                    &_down
+                        font-size: 12px
+                        line-height: 16px
                 &__value
                     font-weight: 800
                     font-size: 24px
