--- a/sass/blocks/_activities.sass
+++ b/sass/blocks/_activities.sass
@@ -13,19 +13,32 @@
         position: relative
         width: 255px
         height: 255px
+        border-radius: 6px
+        overflow: hidden
+        &::after
+            content: ""
+            position: absolute
+            width: 100%
+            height: 100%
+            top: 0
+            left: 0
+            bottom: 0
+            right: 0
+            background: linear-gradient(179.83deg, rgba(196, 196, 196, 0) 35.34%, #0A223D 99.85%)
         &__img
             width: 100%
             height: 100%
             object-fit: cover
-            border-radius: 6px
+            
         &__text
             position: absolute
+            z-index: 99
             left: 26px
-            bottom: 24px    
+            bottom: 30px    
             color: $color-w
         &__descr
             display: block
-            margin-bottom: 18px
+            margin-bottom: 23px
             font-weight: bold
             font-size: 16px
             line-height: 20px
