--- a/sass/blocks/_breadcrump.sass
+++ b/sass/blocks/_breadcrump.sass
@@ -2,7 +2,7 @@
     &-list
         display: flex
         margin: 0
-        padding: 18px 0
+        padding: 19px 0 18px
         font-size: 10px
         line-height: 13px
         color: $text-color
