--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -160,12 +160,16 @@
         .big-item
             &__wrapper
                 height: 250px
+            &__img
+                object-position: 50% 5%
             &__content
                 padding: 27px
             .stars
                 display: none
             &__description
                 display: none
+            &__properties
+                margin-bottom: 24px
     .newsletter
         &__wrapper
             flex-direction: column
