--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -12,6 +12,14 @@
             height: 230px
             &__text
                 left: 18px
+    .packages
+        .big-item
+            &__title
+                margin-bottom: 24px
+            &__description
+                margin-bottom: 30px
+            &__properties
+                margin-bottom: 35px
 
 @media ( max-width: 992px )
     .container
@@ -55,6 +63,13 @@
             margin-bottom: 50px
             font-size: 30px
             line-height: 38px
+        .big-item
+            &__title
+                margin-bottom: 30px
+            &__description
+                margin-bottom: 40px
+            &__properties
+                margin-bottom: 40px
     .newsletter
         &__wrapper
             width: 700px
