--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -177,6 +177,10 @@
                 height: 250px
             &__img
                 object-position: 50% 5%
+            &__offer
+                padding: 4px 9px
+                font-size: 8px
+                line-height: 10px
             &__content
                 padding: 27px
             .stars
