Added footer, style for it

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -17,5 +17,7 @@
 //Стили блока с отзывами//
 @import "blocks/activities"
 //Стили для блока с активностями//
+@import "blocks/footer"
+//Стили footer
 @import "media"
 //Стили для мобильных устройств//
