--- a/css/main.css
+++ b/css/main.css
@@ -1397,6 +1397,285 @@ body {
   background-color: #ec1f46;
 }
 
+.footer {
+  padding: 108px 0 46px;
+  background-color: #0a223d;
+}
+
+.footer-top {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 300px 195px;
+      grid-template-columns: 1fr 1fr 300px 195px;
+  -webkit-column-gap: 46px;
+          column-gap: 46px;
+  margin-bottom: 94px;
+}
+
+.footer-top__wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (max-content)[2];
+      grid-template-rows: repeat(2, -webkit-max-content);
+      grid-template-rows: repeat(2, max-content);
+  row-gap: 23px;
+}
+
+.footer-top__logo-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer-top__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer-top__title {
+  margin: 0 0 20px;
+  font-size: 18px;
+  line-height: 23px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.footer-top__title_nm {
+  margin: 0;
+}
+
+.footer-top .list {
+  margin: 0;
+  padding: 0;
+}
+
+.footer-top .list__item {
+  list-style: none;
+}
+
+.footer-top .list .item__link {
+  font-size: 14px;
+  line-height: 22px;
+  text-decoration: none;
+  color: #bdbdbd;
+}
+
+.footer-top .list .item__link:hover {
+  text-decoration: underline;
+}
+
+.footer-top__link {
+  display: inline-block;
+  margin-right: 10px;
+  font-size: 0;
+  text-decoration: none;
+}
+
+.footer-top__link:last-child {
+  margin-right: 0;
+}
+
+.footer-top__icon {
+  width: 21px;
+  height: 21px;
+  fill: #bdbdbd;
+}
+
+.footer-contact {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (50%)[2];
+      grid-template-columns: repeat(2, 50%);
+  -webkit-column-gap: 13px;
+          column-gap: 13px;
+  margin-bottom: 95px;
+}
+
+.footer-contact__details-wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (max-content)[3];
+      grid-template-rows: repeat(3, -webkit-max-content);
+      grid-template-rows: repeat(3, max-content);
+  width: 539px;
+}
+
+.footer-contact__form-wrapper {
+  width: 539px;
+}
+
+.footer-contact__form {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  -webkit-column-gap: 30px;
+          column-gap: 30px;
+  row-gap: 15px;
+}
+
+.footer-contact__title {
+  margin: 0 0 25px;
+  font-size: 18px;
+  line-height: 23px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.footer-contact__subtitle {
+  margin-bottom: 22px;
+}
+
+.footer-contact__txt {
+  font-size: 14px;
+  line-height: 22px;
+  color: #bdbdbd;
+}
+
+.footer-contact__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.footer-contact__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 22px;
+}
+
+.footer-contact__item:nth-child(2) {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+}
+
+.footer-contact__icon {
+  width: 21px;
+  height: 21px;
+  margin-right: 18px;
+  fill: #bdbdbd;
+}
+
+.footer-contact .details__title {
+  margin-top: 10px;
+}
+
+.footer-contact .form {
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.footer-contact .form__input {
+  padding: 18px 23px;
+  border-radius: 4px;
+}
+
+.footer-contact .form__textarea {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+  height: 123px;
+  resize: none;
+  margin-bottom: 7px;
+  padding: 18px 23px;
+  border-radius: 4px;
+}
+
+.footer-contact .form__button-wrapper {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  color: #e0e0e0;
+}
+
+.footer-contact .form__button {
+  padding: 18px 65px;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  color: #ffffff;
+  border: 0;
+  border-radius: 4px;
+  background-color: #ec1f46;
+}
+
+.footer-bottom {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 283px 1fr;
+      grid-template-columns: 1fr 283px 1fr;
+}
+
+.footer-bottom__link-wrapper {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.footer-bottom__logo-wrapper {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.footer-bottom__companies-logo {
+  width: 136px;
+  height: 22px;
+}
+
+.footer-bottom__link {
+  font-size: 12px;
+  line-height: 15px;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.footer-bottom__link:hover {
+  text-decoration: underline;
+}
+
 @media (max-width: 1200px) {
   .container {
     width: 960px;
