--- a/css/main.css
+++ b/css/main.css
@@ -1407,39 +1407,57 @@ body {
   display: grid;
   -ms-grid-columns: 1fr 1fr 300px 195px;
       grid-template-columns: 1fr 1fr 300px 195px;
+  -ms-grid-rows: (max-content)[2];
+      grid-template-rows: repeat(2, -webkit-max-content);
+      grid-template-rows: repeat(2, max-content);
   -webkit-column-gap: 46px;
           column-gap: 46px;
   margin-bottom: 94px;
 }
 
-.footer-top__wrapper {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: (max-content)[2];
-      grid-template-rows: repeat(2, -webkit-max-content);
-      grid-template-rows: repeat(2, max-content);
-  row-gap: 23px;
-}
-
 .footer-top__logo-wrapper {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.footer-top__categories {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+}
+
+.footer-top__additional-info {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
 }
 
 .footer-top__social {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.footer-top__legal-info {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
 }
 
 .footer-top__title {
@@ -1474,10 +1492,13 @@ body {
   text-decoration: underline;
 }
 
+.footer-top__links {
+  font-size: 0;
+}
+
 .footer-top__link {
   display: inline-block;
   margin-right: 10px;
-  font-size: 0;
   text-decoration: none;
 }
 
@@ -1494,10 +1515,10 @@ body {
 .footer-contact {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (50%)[2];
-      grid-template-columns: repeat(2, 50%);
-  -webkit-column-gap: 13px;
-          column-gap: 13px;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  -webkit-column-gap: 30px;
+          column-gap: 30px;
   margin-bottom: 95px;
 }
 
@@ -1507,11 +1528,6 @@ body {
   -ms-grid-rows: (max-content)[3];
       grid-template-rows: repeat(3, -webkit-max-content);
       grid-template-rows: repeat(3, max-content);
-  width: 539px;
-}
-
-.footer-contact__form-wrapper {
-  width: 539px;
 }
 
 .footer-contact__form {
@@ -1572,7 +1588,11 @@ body {
 }
 
 .footer-contact .details__title {
-  margin-top: 10px;
+  margin-top: 13px;
+}
+
+.footer-contact .form-title {
+  margin-bottom: 35px;
 }
 
 .footer-contact .form {
@@ -1624,6 +1644,7 @@ body {
   border: 0;
   border-radius: 4px;
   background-color: #ec1f46;
+  cursor: pointer;
 }
 
 .footer-bottom {
@@ -1824,6 +1845,87 @@ body {
   .activities .activity__text {
     left: 27px;
   }
+  .footer {
+    padding: 73px 0 33px;
+  }
+  .footer-top {
+    -ms-grid-columns: 1fr 260px 202px;
+        grid-template-columns: 1fr 260px 202px;
+    -ms-grid-rows: (max-content)[2];
+        grid-template-rows: repeat(2, -webkit-max-content);
+        grid-template-rows: repeat(2, max-content);
+    -webkit-column-gap: 38px;
+            column-gap: 38px;
+    row-gap: 48px;
+    margin-bottom: 55px;
+  }
+  .footer-top__logo-wrapper {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+  .footer-top__logo {
+    width: 94px;
+    height: 110px;
+  }
+  .footer-top__categories {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  .footer-top__additional-info {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  .footer-top__social {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
+    grid-column: 2/4;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 40% 60%;
+        grid-template-columns: 40% 60%;
+    -webkit-column-gap: 16px;
+            column-gap: 16px;
+    -ms-flex-line-pack: center;
+        align-content: center;
+  }
+  .footer-top__title_nm {
+    width: 200px;
+  }
+  .footer-top__legal-info {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  .footer-contact {
+    -ms-grid-columns: 77%;
+        grid-template-columns: 77%;
+    -ms-grid-rows: (max-content)[2];
+        grid-template-rows: repeat(2, -webkit-max-content);
+        grid-template-rows: repeat(2, max-content);
+    row-gap: 39px;
+    margin-bottom: 52px;
+  }
+  .footer-contact__title {
+    margin: 0 0 24px;
+  }
+  .footer-contact .form-title {
+    margin-bottom: 34px;
+  }
+  .footer-bottom {
+    -ms-grid-columns: 283px 1fr 1fr;
+        grid-template-columns: 283px 1fr 1fr;
+  }
+  .footer-bottom__link-wrapper {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+  }
 }
 
 @media (max-width: 759px) {
@@ -2013,6 +2115,19 @@ body {
   }
   .activities .activity__text {
     left: 20px;
+  }
+  .footer-top {
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+  }
+  .footer-top__social {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
+    grid-column: 2/4;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -2223,6 +2338,133 @@ body {
   }
   .activities .activity__text {
     left: 26px;
+  }
+  .footer-top {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: (max-content)[5];
+        grid-template-rows: repeat(5, -webkit-max-content);
+        grid-template-rows: repeat(5, max-content);
+    row-gap: 30px;
+    margin-bottom: 40px;
+  }
+  .footer-top__logo-wrapper {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+  .footer-top__categories {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+  }
+  .footer-top__additional-info {
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    grid-row: 4/5;
+  }
+  .footer-top__social {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: (max-content)[2];
+        grid-template-rows: repeat(2, -webkit-max-content);
+        grid-template-rows: repeat(2, max-content);
+    row-gap: 30px;
+    -ms-flex-line-pack: center;
+        align-content: center;
+  }
+  .footer-top__legal-info {
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
+    grid-row: 5/6;
+  }
+  .footer-contact {
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
+    margin-bottom: 30px;
+  }
+  .footer-contact .form {
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
+    -ms-grid-rows: (100%)[4];
+        grid-template-rows: repeat(4, 100%);
+  }
+  .footer-contact .form__input {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+  }
+  .footer-contact .form__input_name {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+  .footer-contact .form__input_number {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  .footer-contact .form__textarea {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+    margin-bottom: 0;
+  }
+  .footer-contact .form__button-wrapper {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    grid-row: 4/5;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: (max-content)[2];
+        grid-template-rows: repeat(2, -webkit-max-content);
+        grid-template-rows: repeat(2, max-content);
+    row-gap: 15px;
+  }
+  .footer-contact .form__button {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    width: 160px;
+  }
+  .footer-bottom {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: (1fr)[2];
+        grid-template-rows: repeat(2, 1fr);
+    row-gap: 10px;
+  }
+  .footer-bottom__link-wrapper {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+  .footer-bottom__logo-wrapper {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
   }
 }
 /*# sourceMappingURL=main.css.map */
