--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -4,19 +4,24 @@
     &-top
         display: grid
         grid-template-columns: 1fr 1fr 300px 195px
+        grid-template-rows: repeat(2, max-content)
         column-gap: 46px
         margin-bottom: 94px
-        &__wrapper
-            display: grid
-            grid-template-rows: repeat(2, max-content)
-            row-gap: 23px
         &__logo-wrapper
+            grid-row: 1/3
             display: flex
             align-items: center
+        &__categories
+            grid-row: 1/3
+        &__additional-info
+            grid-row: 1/2
         &__social
+            grid-row: 2/3
             display: flex
-            align-items: center
+            align-items: flex-end
             justify-content: space-between
+        &__legal-info
+            grid-row: 1/3
         &__title
             margin: 0 0 20px
             font-size: 18px 
@@ -37,10 +42,11 @@
                 color: #bdbdbd
                 &:hover
                     text-decoration: underline
+        &__links
+            font-size: 0
         &__link 
             display: inline-block
             margin-right: 10px
-            font-size: 0
             text-decoration: none
             &:last-child
                 margin-right: 0
@@ -50,15 +56,12 @@
             fill: #bdbdbd
     &-contact
         display: grid
-        grid-template-columns: repeat(2,50%)
-        column-gap: 13px
+        grid-template-columns: repeat(2,1fr)
+        column-gap: 30px
         margin-bottom: 95px
         &__details-wrapper
             display: grid
             grid-template-rows: repeat(3, max-content)
-            width: 539px
-        &__form-wrapper
-            width: 539px
         &__form
             display: grid
             grid-template-columns: repeat(2, 1fr)
@@ -92,7 +95,9 @@
             margin-right: 18px
             fill: #bdbdbd
         .details__title
-            margin-top: 10px
+            margin-top: 13px
+        .form-title
+            margin-bottom: 35px
         .form
             font-size: 12px
             line-height: 15px
@@ -124,6 +129,7 @@
                 border: 0
                 border-radius: 4px
                 background-color: $primary
+                cursor: pointer
     &-bottom
         display: grid
         grid-template-columns: 1fr 283px 1fr
