--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -441,6 +441,8 @@
         &-contact
             grid-template-columns: 100%
             margin-bottom: 30px
+            .details-title
+                margin-top: 0
             .form
                 grid-template-columns: 100%
                 grid-template-rows: repeat(4, 100%)
