--- a/css/main.css
+++ b/css/main.css
@@ -2346,7 +2346,7 @@ body {
         grid-template-rows: repeat(5, -webkit-max-content);
         grid-template-rows: repeat(5, max-content);
     row-gap: 30px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
   }
   .footer-top__logo-wrapper {
     -ms-grid-row: 1;
@@ -2397,8 +2397,9 @@ body {
   .footer-contact .form {
     -ms-grid-columns: 100%;
         grid-template-columns: 100%;
-    -ms-grid-rows: (100%)[4];
-        grid-template-rows: repeat(4, 100%);
+    -ms-grid-rows: (max-content)[4];
+        grid-template-rows: repeat(4, -webkit-max-content);
+        grid-template-rows: repeat(4, max-content);
   }
   .footer-contact .form__input {
     -ms-grid-column: 1;
