--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -421,7 +421,7 @@
             grid-template-columns: 1fr
             grid-template-rows: repeat(5, max-content)
             row-gap: 30px
-            margin-bottom: 40px
+            margin-bottom: 30px
             &__logo-wrapper
                 grid-row: 1/2
             &__categories
@@ -445,7 +445,7 @@
                 margin-top: 0
             .form
                 grid-template-columns: 100%
-                grid-template-rows: repeat(4, 100%)
+                grid-template-rows: repeat(4, max-content)
                 &__input
                     grid-column: 1/2
                     &_name
