--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -440,9 +440,11 @@
                 grid-row: 3/4
         &-contact
             grid-template-columns: 100%
-            margin-bottom: 30px
+            margin-bottom: 20px
             .details-title
                 margin-top: 0
+            .form-title
+                margin-bottom: 15px
             .form
                 grid-template-columns: 100%
                 grid-template-rows: repeat(4, max-content)
