--- a/css/main.css
+++ b/css/main.css
@@ -1581,7 +1581,9 @@ body {
 }
 
 .footer-contact__icon {
+  min-width: 21px;
   width: 21px;
+  min-height: 21px;
   height: 21px;
   margin-right: 18px;
   fill: #bdbdbd;
