--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -90,7 +90,9 @@
             &:nth-child(2)
                 align-items: start
         &__icon
+            min-width: 21px
             width: 21px
+            min-height: 21px
             height: 21px
             margin-right: 18px
             fill: #bdbdbd
