Added mobile menu

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -38,7 +38,6 @@
                 width: 16px
                 height: 16px
                 fill: $color-w
-                
         .user 
             display: flex
             align-items: center
@@ -77,3 +76,7 @@
             text-decoration: none
             &:hover
                 text-decoration: underline
+        &__search, &__user
+            &_mobile
+                &_hidden
+                    display: none
