--- a/css/main.css
+++ b/css/main.css
@@ -489,6 +489,10 @@ body {
   text-decoration: underline;
 }
 
+.navbar-menu__search_mobile_hidden, .navbar-menu__user_mobile_hidden {
+  display: none;
+}
+
 .breadcrump-list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1371,7 +1375,7 @@ body {
 
 .activities .activity__text {
   position: absolute;
-  z-index: 99;
+  z-index: 20;
   left: 26px;
   bottom: 30px;
   color: #ffffff;
@@ -1599,6 +1603,7 @@ body {
 .footer-contact .form__input {
   padding: 18px 23px;
   border-radius: 4px;
+  border: 0;
 }
 
 .footer-contact .form__textarea {
@@ -1610,6 +1615,7 @@ body {
   margin-bottom: 7px;
   padding: 18px 23px;
   border-radius: 4px;
+  border: 0;
 }
 
 .footer-contact .form__button-wrapper {
@@ -1740,10 +1746,10 @@ body {
   .navbar-bottom .container {
     width: 673px;
   }
-  .navbar-bottom .container .navbar-menu {
+  .navbar-menu {
     padding: 22px 0;
   }
-  .navbar-bottom .container .navbar-menu__link {
+  .navbar-menu__link {
     font-size: 12px;
     line-height: 15px;
   }
@@ -1925,19 +1931,29 @@ body {
 }
 
 @media (max-width: 759px) {
+  body {
+    padding-top: 78px;
+  }
   .container {
     width: 576px;
   }
-  .container .navbar-top {
+  .navbar__mobile_fixed {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    z-index: 99;
+  }
+  .navbar-top {
     padding: 28px 0;
   }
-  .container .navbar-top .logo {
+  .navbar-top .logo {
     width: 100px;
   }
-  .container .navbar-top .search, .container .navbar-top .user {
+  .navbar-top .search__mobile_hidden, .navbar-top .user__mobile_hidden {
     display: none;
   }
-  .container .navbar-top .menu-button {
+  .navbar-top .menu-button {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1953,13 +1969,106 @@ body {
             justify-content: space-between;
     height: 11px;
   }
-  .container .navbar-top .menu-button__line {
+  .navbar-top .menu-button__line {
     width: 16px;
     height: 1px;
     background-color: #333333;
   }
-  .navbar-menu {
+  .navbar-bottom {
     display: none;
+    position: fixed;
+    top: 78px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+  .navbar-bottom_active {
+    display: block;
+  }
+  .navbar-bottom .container {
+    width: 576px;
+  }
+  .navbar-menu__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .navbar-menu__item {
+    margin-bottom: 20px;
+  }
+  .navbar-menu__item:last-child {
+    margin-bottom: 0;
+  }
+  .navbar-menu__search_mobile_hidden, .navbar-menu__user_mobile_hidden {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .navbar-menu .search {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 19px;
+    height: 41px;
+    border-radius: 6px;
+    overflow: hidden;
+  }
+  .navbar-menu .search__input {
+    width: 245px;
+    padding: 0 75px 0 23px;
+    font-size: 12px;
+    line-height: 15px;
+    border: none;
+    background-color: #f5fafe;
+    color: #333333;
+  }
+  .navbar-menu .search__button {
+    position: absolute;
+    width: 65px;
+    height: 100%;
+    top: 0;
+    right: 0;
+    background-color: #ec1f46;
+    border: 0;
+    cursor: pointer;
+  }
+  .navbar-menu .search__icon {
+    width: 16px;
+    height: 16px;
+    fill: #ffffff;
+  }
+  .navbar-menu .user {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 7px;
+    font-size: 14px;
+    line-height: 18px;
+    text-decoration: none;
+    color: #ffffff;
+  }
+  .navbar-menu .user__avatar {
+    margin-bottom: 10px;
+    width: 40px;
+    height: 40px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-radius: 50%;
+  }
+  .navbar-menu .user:hover {
+    text-decoration: underline;
   }
   .hotel {
     padding-bottom: 40px;
@@ -2128,6 +2237,9 @@ body {
 }
 
 @media (max-width: 619px) {
+  body {
+    padding-top: 72px;
+  }
   .container {
     width: 90%;
   }
@@ -2137,7 +2249,7 @@ body {
   .container .navbar-top .logo {
     width: 100px;
   }
-  .container .navbar-top .search, .container .navbar-top .user {
+  .container .navbar-top .search__mobile_hidden, .container .navbar-top .user__mobile_hidden {
     display: none;
   }
   .container .navbar-top .menu-button {
@@ -2161,8 +2273,104 @@ body {
     height: 1px;
     background-color: #333333;
   }
-  .navbar-menu {
+  .navbar-bottom {
     display: none;
+    position: fixed;
+    top: 72px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+  .navbar-bottom_active {
+    display: block;
+  }
+  .navbar-bottom_active .container {
+    width: 90%;
+  }
+  .navbar-menu {
+    padding: 31px 0 68px;
+  }
+  .navbar-menu__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .navbar-menu__item {
+    margin-bottom: 15px;
+  }
+  .navbar-menu__item:last-child {
+    margin-bottom: 0;
+  }
+  .navbar-menu__search_mobile_hidden, .navbar-menu__user_mobile_hidden {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .navbar-menu .search {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 24px;
+    height: 41px;
+    border-radius: 6px;
+    overflow: hidden;
+  }
+  .navbar-menu .search__input {
+    width: 245px;
+    padding: 0 75px 0 23px;
+    font-size: 12px;
+    line-height: 15px;
+    border: none;
+    background-color: #f5fafe;
+    color: #333333;
+  }
+  .navbar-menu .search__button {
+    position: absolute;
+    width: 65px;
+    height: 100%;
+    top: 0;
+    right: 0;
+    background-color: #ec1f46;
+    border: 0;
+    cursor: pointer;
+  }
+  .navbar-menu .search__icon {
+    width: 16px;
+    height: 16px;
+    fill: #ffffff;
+  }
+  .navbar-menu .user {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 12px;
+    font-size: 14px;
+    line-height: 18px;
+    text-decoration: none;
+    color: #ffffff;
+  }
+  .navbar-menu .user__avatar {
+    margin-bottom: 10px;
+    width: 40px;
+    height: 40px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-radius: 50%;
+  }
+  .navbar-menu .user:hover {
+    text-decoration: underline;
   }
   .hotel {
     padding-bottom: 40px;
