--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -32,14 +32,15 @@
                 margin-left: 7%
                 &__input
                     width: 340px
-    .navbar-bottom
-        .container
-            width: 673px
-            .navbar-menu
-                padding: 22px 0
-                &__link
-                    font-size: 12px
-                    line-height: 15px
+    .navbar
+        &-bottom
+            .container
+                width: 673px
+        &-menu
+            padding: 22px 0
+            &__link
+                font-size: 12px
+                line-height: 15px
     .hotel
         padding-bottom: 60px
         &-grid
@@ -147,14 +148,26 @@
             &__link-wrapper
                 grid-column: 1/2
 @media ( max-width:759px)
+    body
+        padding-top: 78px
     .container
         width: 576px
-        .navbar-top
+    .navbar
+        &__mobile
+            &_fixed
+                position: fixed
+                left: 0
+                top: 0
+                right: 0
+                z-index: 99
+        &-top
             padding: 28px 0
             .logo
                 width: 100px
             .search, .user
-                display: none
+                &__mobile
+                    &_hidden
+                        display: none
             .menu-button
                 display: flex
                 flex-direction: column
@@ -165,8 +178,74 @@
                     width: 16px
                     height: 1px
                     background-color: $text-color
-    .navbar-menu
-        display: none   
+        &-bottom
+            display: none
+            position: fixed
+            top: 78px
+            bottom: 0
+            left: 0
+            right: 0
+            &_active
+                display: block
+            .container
+                width: 576px
+        &-menu
+            &__list
+                flex-direction: column
+                align-items: center
+            &__item
+                margin-bottom: 20px
+                &:last-child
+                    margin-bottom: 0
+            &__search, &__user
+                &_mobile
+                    &_hidden
+                        display: flex
+            .search 
+                position: relative
+                display: flex
+                margin-bottom: 19px
+                height: 41px
+                border-radius: 6px
+                overflow: hidden
+                &__input 
+                    width: 245px
+                    padding: 0 75px 0 23px
+                    font-size: 12px
+                    line-height: 15px
+                    border: none
+                    background-color: #f5fafe
+                    color: $text-color
+                &__button 
+                    position: absolute
+                    width: 65px
+                    height: 100%
+                    top: 0
+                    right: 0
+                    background-color: $primary
+                    border: 0
+                    cursor: pointer
+                &__icon
+                    width: 16px
+                    height: 16px
+                    fill: $color-w
+            .user 
+                display: flex
+                flex-direction: column
+                align-items: center
+                margin-bottom: 7px
+                font-size: 14px
+                line-height: 18px
+                text-decoration: none
+                color: $color-w
+                &__avatar
+                    margin-bottom: 10px 
+                    width: 40px
+                    height: 40px
+                    object-fit: cover
+                    border-radius: 50%
+                &:hover
+                    text-decoration: underline
     .hotel
         padding-bottom: 40px
         &-info
@@ -193,14 +272,12 @@
         &-wrapper
             flex-direction: column
             .booking-card
-                
                 width: 100%
                 margin-bottom: 20px
                 padding: 27px 22px
                 &__button
                     padding: 13px 54px
             .map
-                
                 width: 100%
     .packages
         &__grid
@@ -276,26 +353,99 @@
                 grid-template-columns: repeat(2, 1fr)  
 
 @media ( max-width: 619px )
+    body
+        padding-top: 72px
     .container
         width: 90%
-        .navbar-top
-            padding: 27px 0
-            .logo
-                width: 100px
-            .search, .user
-                display: none
-            .menu-button
+        .navbar
+            &-top
+                padding: 27px 0
+                .logo
+                    width: 100px
+                .search, .user
+                    &__mobile
+                        &_hidden
+                            display: none
+                .menu-button
+                    display: flex
+                    flex-direction: column
+                    align-items: center
+                    justify-content: space-between
+                    height: 11px
+                    &__line
+                        width: 16px
+                        height: 1px
+                        background-color: $text-color
+    .navbar
+        &-bottom
+            display: none
+            position: fixed
+            top: 72px
+            bottom: 0
+            left: 0
+            right: 0
+            &_active
+                display: block
+                .container
+                    width: 90%
+        &-menu
+            padding: 31px 0 68px
+            &__list
+                flex-direction: column
+                align-items: center
+            &__item
+                margin-bottom: 15px
+                &:last-child
+                    margin-bottom: 0
+            &__search, &__user
+                &_mobile
+                    &_hidden
+                        display: flex
+            .search 
+                position: relative
+                display: flex
+                margin-bottom: 24px
+                height: 41px
+                border-radius: 6px
+                overflow: hidden
+                &__input 
+                    width: 245px
+                    padding: 0 75px 0 23px
+                    font-size: 12px
+                    line-height: 15px
+                    border: none
+                    background-color: #f5fafe
+                    color: $text-color
+                &__button 
+                    position: absolute
+                    width: 65px
+                    height: 100%
+                    top: 0
+                    right: 0
+                    background-color: $primary
+                    border: 0
+                    cursor: pointer
+                &__icon
+                    width: 16px
+                    height: 16px
+                    fill: $color-w
+            .user 
                 display: flex
                 flex-direction: column
                 align-items: center
-                justify-content: space-between
-                height: 11px
-                &__line
-                    width: 16px
-                    height: 1px
-                    background-color: $text-color
-    .navbar-menu
-        display: none   
+                margin-bottom: 12px
+                font-size: 14px
+                line-height: 18px
+                text-decoration: none
+                color: $color-w
+                &__avatar
+                    margin-bottom: 10px 
+                    width: 40px
+                    height: 40px
+                    object-fit: cover
+                    border-radius: 50%
+                &:hover
+                    text-decoration: underline   
     .hotel
         padding-bottom: 40px
         &-info
