--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -104,6 +104,7 @@
             &__input
                 padding: 18px 23px
                 border-radius: 4px
+                border: 0
             &__textarea
                 grid-column: 1/3
                 height: 123px
@@ -111,6 +112,7 @@
                 margin-bottom: 7px
                 padding: 18px 23px
                 border-radius: 4px
+                border: 0
             &__button-wrapper
                 grid-column: 1/3
                 display: flex
