Fixed mobile responsivity

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -185,6 +185,7 @@
             bottom: 0
             left: 0
             right: 0
+            overflow: auto
             &_active
                 display: block
             .container
