Added modal, style for it

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -18,6 +18,8 @@
 @import "blocks/activities"
 //Стили для блока с активностями//
 @import "blocks/footer"
-//Стили footer
+//Стили footer//
+@import "blocks/modal"
+//Стили модального окна//
 @import "media"
 //Стили для мобильных устройств//
