--- a/css/main.css
+++ b/css/main.css
@@ -1699,6 +1699,141 @@ body {
   text-decoration: underline;
 }
 
+.modal__overlay {
+  position: fixed;
+  z-index: 100;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 143, 223, 0.39);
+  visibility: hidden;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+}
+
+.modal__overlay_active {
+  visibility: visible;
+}
+
+.modal__dialog {
+  position: fixed;
+  z-index: 101;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 478px;
+  margin: 0 auto;
+  padding: 33px 88px;
+  border-radius: 8px;
+  background-color: #0a223d;
+  visibility: hidden;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+}
+
+.modal__dialog_active {
+  visibility: visible;
+}
+
+.modal__close {
+  position: absolute;
+  top: 17px;
+  right: 18px;
+  width: 16px;
+  height: 16px;
+}
+
+.modal__icon {
+  width: 100%;
+  height: 100%;
+  fill: #ffffff;
+}
+
+.modal__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.modal__title {
+  margin: 0 0 15px;
+  font-size: 18px;
+  line-height: 23px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.modal__input {
+  width: 100%;
+  margin-bottom: 15px;
+  padding: 18px 23px;
+  font-size: 12px;
+  line-height: 15px;
+  color: #333333;
+  border: 0;
+  border-radius: 4px;
+}
+
+.modal__textarea {
+  width: 100%;
+  height: 123px;
+  margin-bottom: 15px;
+  padding: 18px 23px;
+  font-size: 12px;
+  line-height: 15px;
+  color: #333333;
+  border: 0;
+  border-radius: 4px;
+  resize: none;
+}
+
+.modal__button-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.modal__button {
+  padding: 18px 66px;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  border: 0;
+  border-radius: 4px;
+  color: #ffffff;
+  background-color: #ec1f46;
+}
+
+.modal__txt {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  color: #E0E0E0;
+}
+
 @media (max-width: 1200px) {
   .container {
     width: 960px;
