--- a/css/main.css
+++ b/css/main.css
@@ -2063,6 +2063,10 @@ body {
     -ms-grid-column-span: 1;
     grid-column: 1/2;
   }
+  .modal__dialog {
+    width: 400px;
+    padding: 33px 66px;
+  }
 }
 
 @media (max-width: 759px) {
@@ -2812,6 +2816,25 @@ body {
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: start;
+  }
+  .modal__dialog {
+    width: 100%;
+    padding: 33px 33px;
+  }
+  .modal__button-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+  .modal__txt {
+    margin-bottom: 15px;
+  }
+  .modal__button {
+    width: 100%;
   }
 }
 /*# sourceMappingURL=main.css.map */
