--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -638,6 +638,7 @@
         &__dialog
             width: 100%
             padding: 33px 33px
+            overflow: auto
         &__button-wrapper
             flex-direction: column-reverse
             align-items: start
