--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -42,6 +42,7 @@
         display: flex
         flex-direction: column
         align-items: center
+        overflow-y: auto
     &__title
         margin: 0 0 15px
         font-size: 18px
@@ -82,6 +83,7 @@
         border-radius: 4px
         color: $color-w
         background-color: $primary
+        cursor: pointer
     &__txt
         font-weight: 700
         font-size: 12px
