--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -1,5 +1,7 @@
 *
     box-sizing: border-box
+html
+    scroll-behavior: smooth
 body
     font-family: "Mulish", sans-serif
     background-color: $bg
