--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -105,6 +105,7 @@
                 padding: 18px 23px
                 border-radius: 4px
                 border: 0
+                color: $text-color
             &__textarea
                 grid-column: 1/3
                 height: 123px
@@ -113,6 +114,7 @@
                 padding: 18px 23px
                 border-radius: 4px
                 border: 0
+                color: $text-color
             &__button-wrapper
                 grid-column: 1/3
                 display: flex
