--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -79,6 +79,13 @@
             font-size: 14px
             line-height: 22px
             color: #bdbdbd
+        &__link
+            font-size: 14px
+            line-height: 22px
+            color: #bdbdbd
+            text-decoration: none
+            &:hover
+                text-decoration: underline
         &__list
             margin: 0
             padding: 0
