--- a/css/main.css
+++ b/css/main.css
@@ -1566,6 +1566,17 @@ body {
   color: #bdbdbd;
 }
 
+.footer-contact__link {
+  font-size: 14px;
+  line-height: 22px;
+  color: #bdbdbd;
+  text-decoration: none;
+}
+
+.footer-contact__link:hover {
+  text-decoration: underline;
+}
+
 .footer-contact__list {
   margin: 0;
   padding: 0;
@@ -2124,6 +2135,9 @@ body {
     -ms-grid-column-span: 2;
     grid-column: 1/3;
   }
+  .modal__button {
+    width: 48.5%;
+  }
 }
 
 @media (max-width: 759px) {
@@ -2487,7 +2501,7 @@ body {
             flex-direction: row;
   }
   .modal__button {
-    width: 50%;
+    width: 48.5%;
   }
 }
 
@@ -3000,7 +3014,7 @@ body {
             flex-direction: row;
   }
   .modal__button {
-    width: 50%;
+    width: 48.5%;
   }
 }
 /*# sourceMappingURL=main.css.map */
