--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -179,6 +179,8 @@
             margin: 0
         &__button-wrapper
             grid-column: 1/3
+        &__button
+            width: 48.5%
 
 @media ( max-width:759px)
     body
@@ -417,7 +419,7 @@
             grid-column: 1/3
             flex-direction: row
         &__button
-            width: 50%
+            width: 48.5%
 
 @media ( max-width: 619px )
     body
@@ -732,4 +734,4 @@
             grid-column: 1/3
             flex-direction: row
         &__button
-            width: 50%
+            width: 48.5%
