Added thank-you, style for it

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -21,5 +21,7 @@
 //Стили footer//
 @import "blocks/modal"
 //Стили модального окна//
+@import "blocks/thank-you"
+//Стили для блока с благодарностью//
 @import "media"
 //Стили для мобильных устройств//
