--- a/css/main.css
+++ b/css/main.css
@@ -1853,6 +1853,47 @@ body {
   color: #E0E0E0;
 }
 
+.thank-you {
+  padding: 40px 0;
+}
+
+.thank-you__content {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  row-gap: 20px;
+}
+
+.thank-you__title {
+  margin: 0;
+  font-size: 36px;
+  line-height: 45px;
+  color: #333333;
+}
+
+.thank-you__text {
+  margin: 0;
+  font-size: 16px;
+  line-height: 22px;
+  color: #333333;
+}
+
+.thank-you__button {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 13px 64px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 19px;
+  color: #ffffff;
+  border: 0;
+  border-radius: 4px;
+  background-color: #ec1f46;
+  text-decoration: none;
+}
+
 @media (max-width: 1200px) {
   .container {
     width: 960px;
@@ -2094,7 +2135,7 @@ body {
   }
 }
 
-@media (max-width: 992px) and (orientation: landscape) {
+@media (max-width: 992px) and (max-height: 525px) and (orientation: landscape) {
   .modal__dialog {
     width: 80%;
     height: 290px;
@@ -2461,9 +2502,13 @@ body {
     margin-bottom: 0;
     margin-left: 0;
   }
+  .thank-you__title {
+    font-size: 24px;
+    line-height: 30px;
+  }
 }
 
-@media (max-width: 759px) and (orientation: landscape) {
+@media (max-width: 759px) and (max-height: 525px) and (orientation: landscape) {
   .modal__dialog {
     width: 90%;
     height: 290px;
@@ -2979,7 +3024,7 @@ body {
   }
 }
 
-@media (max-width: 619px) and (orientation: landscape) {
+@media (max-width: 619px) and (max-height: 525px) and (orientation: landscape) {
   .modal__dialog {
     width: 100%;
     height: 290px;
