--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -156,7 +156,7 @@
         &__dialog
             width: 400px
             padding: 33px 66px
-@media ( max-width: 992px ) and (orientation: landscape)
+@media ( max-width: 992px ) and (max-height: 525px) and (orientation: landscape)
     .modal
         &__dialog
             width: 80%
@@ -398,7 +398,12 @@
             &__links
                 margin-bottom: 0
                 margin-left: 0 
-@media ( max-width: 759px ) and (orientation: landscape)
+    .thank-you
+        &__title
+            font-size: 24px
+            line-height: 30px
+    
+@media ( max-width: 759px ) and (max-height: 525px) and (orientation: landscape)
     .modal
         &__dialog
             width: 90%
@@ -715,7 +720,7 @@
             margin-bottom: 15px
         &__button
             width: 100%
-@media ( max-width: 619px ) and (orientation: landscape)
+@media ( max-width: 619px ) and (max-height: 525px) and (orientation: landscape)
     .modal
         &__dialog
             width: 100%
