Added: phpmail, validation

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -5,7 +5,9 @@ html
 body
     font-family: "Mulish", sans-serif
     background-color: $bg
-  
+
 .container
     width: 1110px
     margin: 0 auto
+.invalid
+    color: red
