--- a/css/main.css
+++ b/css/main.css
@@ -360,6 +360,10 @@ body {
   margin: 0 auto;
 }
 
+.invalid {
+  color: red;
+}
+
 .navbar {
   background-color: #ffffff;
 }
@@ -1616,6 +1620,7 @@ body {
 }
 
 .footer-contact .form__input {
+  width: 100%;
   padding: 18px 23px;
   border-radius: 4px;
   border: 0;
@@ -1790,7 +1795,7 @@ body {
 }
 
 .modal__title {
-  margin: 0 0 15px;
+  margin: 0;
   font-size: 18px;
   line-height: 23px;
   text-transform: uppercase;
@@ -1799,7 +1804,7 @@ body {
 
 .modal__input {
   width: 100%;
-  margin-bottom: 15px;
+  margin-top: 15px;
   padding: 18px 23px;
   font-size: 12px;
   line-height: 15px;
@@ -1808,10 +1813,14 @@ body {
   border-radius: 4px;
 }
 
+.modal__input-group {
+  width: 100%;
+}
+
 .modal__textarea {
   width: 100%;
   height: 123px;
-  margin-bottom: 15px;
+  margin-top: 15px;
   padding: 18px 23px;
   font-size: 12px;
   line-height: 15px;
@@ -1832,6 +1841,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
+  margin-top: 15px;
 }
 
 .modal__button {
@@ -2133,13 +2143,19 @@ body {
     width: 400px;
     padding: 33px 66px;
   }
+  .invalid {
+    font-size: 14px;
+  }
 }
 
-@media (max-width: 992px) and (max-height: 525px) and (orientation: landscape) {
+@media (max-width: 992px) and (max-height: 500px) and (orientation: landscape) {
   .modal__dialog {
     width: 80%;
     height: 290px;
     top: 50%;
+  }
+  .modal__dialog_error {
+    height: 350px;
   }
   .modal__form {
     display: -ms-grid;
@@ -2149,6 +2165,10 @@ body {
     -webkit-column-gap: 15px;
             column-gap: 15px;
     row-gap: 15px;
+  }
+  .modal__form_error {
+    height: 284px;
+    row-gap: 8px;
   }
   .modal__title {
     -ms-grid-column: 1;
@@ -2180,6 +2200,10 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    margin: 0;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
   }
   .modal__button {
     width: 100%;
@@ -2508,11 +2532,14 @@ body {
   }
 }
 
-@media (max-width: 759px) and (max-height: 525px) and (orientation: landscape) {
+@media (max-width: 759px) and (max-height: 500px) and (orientation: landscape) {
   .modal__dialog {
     width: 90%;
     height: 290px;
     top: 50%;
+  }
+  .modal__dialog_error {
+    height: 350px;
   }
   .modal__form {
     display: -ms-grid;
@@ -2522,6 +2549,10 @@ body {
     -webkit-column-gap: 15px;
             column-gap: 15px;
     row-gap: 15px;
+  }
+  .modal__form_error {
+    height: 284px;
+    row-gap: 10px;
   }
   .modal__title {
     -ms-grid-column: 1;
@@ -2559,6 +2590,9 @@ body {
   }
   .modal__txt {
     display: none;
+  }
+  .invalid {
+    font-size: 12px;
   }
 }
 
@@ -3007,6 +3041,9 @@ body {
     width: 95%;
     padding: 33px 33px;
   }
+  .modal__textarea_error {
+    height: 93px;
+  }
   .modal__button-wrapper {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
@@ -3022,13 +3059,19 @@ body {
   .modal__button {
     width: 100%;
   }
+  .invalid {
+    font-size: 12px;
+  }
 }
 
-@media (max-width: 619px) and (max-height: 525px) and (orientation: landscape) {
+@media (max-width: 619px) and (max-height: 500px) and (orientation: landscape) {
   .modal__dialog {
     width: 100%;
     height: 290px;
     top: 50%;
+  }
+  .modal__dialog_error {
+    height: 320px;
   }
   .modal__form {
     display: -ms-grid;
@@ -3039,17 +3082,25 @@ body {
             column-gap: 15px;
     row-gap: 15px;
   }
+  .modal__form_error {
+    height: 254px;
+    row-gap: 7px;
+  }
   .modal__title {
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-column: 1/3;
     margin: 0;
+    font-size: 95%;
   }
   .modal__input {
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
     grid-column: 1/2;
     margin: 0;
+  }
+  .modal__input_error {
+    padding: 15px 23px;
   }
   .modal__textarea {
     -ms-grid-column: 2;
