--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -24,8 +24,8 @@
 @media ( max-width: 992px )
     .container
         width: 700px
-        .navbar-top 
-            padding: 30px 0   
+        .navbar-top
+            padding: 30px 0
             .logo
                 width: 133px
             .search
@@ -74,7 +74,7 @@
     .newsletter
         &__wrapper
             width: 700px
-            padding: 92px 0 
+            padding: 92px 0
     .reviews
         padding: 40px 0 60px
         &__title
@@ -126,7 +126,7 @@
                 grid-column: 2/4
                 grid-row: 1/2
                 display: grid
-                grid-template-columns: 40% 60% 
+                grid-template-columns: 40% 60%
                 column-gap: 16px
                 align-content: center
                 margin-left: -10px
@@ -156,17 +156,24 @@
         &__dialog
             width: 400px
             padding: 33px 66px
-@media ( max-width: 992px ) and (max-height: 525px) and (orientation: landscape)
+    .invalid
+        font-size: 14px
+@media ( max-width: 992px ) and (max-height: 500px) and (orientation: landscape)
     .modal
         &__dialog
             width: 80%
             height: 290px
             top: 50%
+            &_error
+                height: 350px
         &__form
             display: grid
             grid-template-columns: repeat(2,1fr)
             column-gap: 15px
             row-gap: 15px
+            &_error
+                height: 284px
+                row-gap: 8px
         &__title
             grid-column: 1/3
             margin: 0
@@ -181,6 +188,8 @@
         &__button-wrapper
             grid-column: 2/3
             flex-direction: row
+            margin: 0
+            align-items: start
         &__button
             width: 100%
         &__txt
@@ -241,14 +250,14 @@
                 &_mobile
                     &_hidden
                         display: flex
-            .search 
+            .search
                 position: relative
                 display: flex
                 margin-bottom: 19px
                 height: 41px
                 border-radius: 6px
                 overflow: hidden
-                &__input 
+                &__input
                     width: 245px
                     padding: 0 75px 0 23px
                     font-size: 12px
@@ -256,7 +265,7 @@
                     border: none
                     background-color: #f5fafe
                     color: $text-color
-                &__button 
+                &__button
                     position: absolute
                     width: 65px
                     height: 100%
@@ -269,7 +278,7 @@
                     width: 16px
                     height: 16px
                     fill: $color-w
-            .user 
+            .user
                 display: flex
                 flex-direction: column
                 align-items: center
@@ -279,7 +288,7 @@
                 text-decoration: none
                 color: $color-w
                 &__avatar
-                    margin-bottom: 10px 
+                    margin-bottom: 10px
                     width: 40px
                     height: 40px
                     object-fit: cover
@@ -353,7 +362,7 @@
             align-items: start
             width: 576px
             height: 320px
-            padding: 76px 20px 83px 
+            padding: 76px 20px 83px
     .reviews
         padding: 40px 0 50px
         &__title
@@ -383,7 +392,7 @@
             height: 255px
             margin-bottom: 20px
             &__text
-                left: 20px 
+                left: 20px
     .footer
         &-top
             grid-template-columns: 1fr 1fr 1fr
@@ -397,23 +406,28 @@
                 margin-left: 0
             &__links
                 margin-bottom: 0
-                margin-left: 0 
+                margin-left: 0
     .thank-you
         &__title
             font-size: 24px
             line-height: 30px
-    
-@media ( max-width: 759px ) and (max-height: 525px) and (orientation: landscape)
+
+@media ( max-width: 759px ) and (max-height: 500px) and (orientation: landscape)
     .modal
         &__dialog
             width: 90%
             height: 290px
             top: 50%
+            &_error
+                height: 350px
         &__form
             display: grid
             grid-template-columns: repeat(2,1fr)
             column-gap: 15px
             row-gap: 15px
+            &_error
+                height: 284px
+                row-gap: 10px
         &__title
             grid-column: 1/3
             margin: 0
@@ -432,7 +446,8 @@
             width: 100%
         &__txt
             display: none
-
+    .invalid
+        font-size: 12px
 @media ( max-width: 619px )
     body
         padding-top: 72px
@@ -482,14 +497,14 @@
                 &_mobile
                     &_hidden
                         display: flex
-            .search 
+            .search
                 position: relative
                 display: flex
                 margin-bottom: 24px
                 height: 41px
                 border-radius: 6px
                 overflow: hidden
-                &__input 
+                &__input
                     width: 245px
                     padding: 0 75px 0 23px
                     font-size: 12px
@@ -497,7 +512,7 @@
                     border: none
                     background-color: #f5fafe
                     color: $text-color
-                &__button 
+                &__button
                     position: absolute
                     width: 65px
                     height: 100%
@@ -510,7 +525,7 @@
                     width: 16px
                     height: 16px
                     fill: $color-w
-            .user 
+            .user
                 display: flex
                 flex-direction: column
                 align-items: center
@@ -520,13 +535,13 @@
                 text-decoration: none
                 color: $color-w
                 &__avatar
-                    margin-bottom: 10px 
+                    margin-bottom: 10px
                     width: 40px
                     height: 40px
                     object-fit: cover
                     border-radius: 50%
                 &:hover
-                    text-decoration: underline   
+                    text-decoration: underline
     .hotel
         padding-bottom: 40px
         &-info
@@ -713,6 +728,9 @@
         &__dialog
             width: 95%
             padding: 33px 33px
+        &__textarea
+            &_error
+                height: 93px
         &__button-wrapper
             flex-direction: column-reverse
             align-items: start
@@ -720,23 +738,33 @@
             margin-bottom: 15px
         &__button
             width: 100%
-@media ( max-width: 619px ) and (max-height: 525px) and (orientation: landscape)
+    .invalid
+        font-size: 12px
+@media ( max-width: 619px ) and (max-height: 500px) and (orientation: landscape)
     .modal
         &__dialog
             width: 100%
             height: 290px
             top: 50%
+            &_error
+                height: 320px
         &__form
             display: grid
             grid-template-columns: repeat(2,1fr)
             column-gap: 15px
             row-gap: 15px
+            &_error
+                height: 254px
+                row-gap: 7px
         &__title
             grid-column: 1/3
             margin: 0
+            font-size: 95%
         &__input
             grid-column: 1/2
             margin: 0
+            &_error
+                padding: 15px 23px
         &__textarea
             grid-column: 2/3
             grid-row: 2/4
