--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -24,7 +24,7 @@
             grid-row: 1/3
         &__title
             margin: 0 0 20px
-            font-size: 18px 
+            font-size: 18px
             line-height: 23px
             text-transform: uppercase
             color: $color-w
@@ -44,7 +44,7 @@
                     text-decoration: underline
         &__links
             font-size: 0
-        &__link 
+        &__link
             display: inline-block
             margin-right: 10px
             text-decoration: none
@@ -109,10 +109,12 @@
             font-size: 12px
             line-height: 15px
             &__input
+                width: 100%
                 padding: 18px 23px
                 border-radius: 4px
                 border: 0
                 color: $text-color
+                &-group
             &__textarea
                 grid-column: 1/3
                 height: 123px
