--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -44,29 +44,31 @@
         align-items: center
         overflow-y: auto
     &__title
-        margin: 0 0 15px
+        margin: 0
         font-size: 18px
         line-height: 23px
         text-transform: uppercase
         color: $color-w
     &__input
         width: 100%
-        margin-bottom: 15px
+        margin-top: 15px
         padding: 18px 23px
         font-size: 12px
         line-height: 15px
         color: $text-color
-        border: 0 
+        border: 0
         border-radius: 4px
+        &-group
+            width: 100%
     &__textarea
         width: 100%
         height: 123px
-        margin-bottom: 15px
+        margin-top: 15px
         padding: 18px 23px
         font-size: 12px
         line-height: 15px
         color: $text-color
-        border: 0 
+        border: 0
         border-radius: 4px
         resize: none
     &__button-wrapper
@@ -74,6 +76,7 @@
         justify-content: space-between
         align-items: center
         width: 100%
+        margin-top: 15px
     &__button
         padding: 18px 66px
         font-weight: 700
