--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -10,4 +10,33 @@ body
     width: 1110px
     margin: 0 auto
 .invalid
-    color: red
+    color: #ff0000
+.modal-error
+    &_name
+        position: absolute
+        left: 0
+        top: 96%
+        z-index: 102
+    &_phone
+        position: absolute
+        left: 0
+        top: 96%
+        z-index: 102
+    &_email
+        position: absolute
+        left: 0
+        top: 96%
+        z-index: 102
+.newsletter-error
+    &_email
+        position: absolute
+        top: 100%
+.footer-error
+    &_name
+        position: absolute
+        left: 0
+        top: 100%
+    &_phone
+        position: absolute
+        left: 0
+        top: 100%
