--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -105,6 +105,8 @@
             margin-top: 13px
         .form-title
             margin-bottom: 35px
+        &__input-group
+            position: relative
         .form
             font-size: 12px
             line-height: 15px
@@ -114,7 +116,6 @@
                 border-radius: 4px
                 border: 0
                 color: $text-color
-                &-group
             &__textarea
                 grid-column: 1/3
                 height: 123px
