--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -165,21 +165,26 @@
             height: 290px
             top: 50%
             &_error
-                height: 350px
+                height: 340px
         &__form
             display: grid
             grid-template-columns: repeat(2,1fr)
+            grid-template-rows: max-content
             column-gap: 15px
             row-gap: 15px
             &_error
-                height: 284px
-                row-gap: 8px
+                height: 274px
+                row-gap: 5px
         &__title
             grid-column: 1/3
             margin: 0
         &__input
             grid-column: 1/2
             margin: 0
+            &_error
+                padding: 15px 23px
+            &-group
+                height: 100%
         &__textarea
             grid-column: 2/3
             grid-row: 2/4
@@ -194,6 +199,13 @@
             width: 100%
         &__txt
             display: none
+    .modal-error
+        &_name
+            top: 65%
+        &_phone
+            top: 65%
+        &_email
+            top: 60%
 
 @media ( max-width:759px)
     body
@@ -419,21 +431,25 @@
             height: 290px
             top: 50%
             &_error
-                height: 350px
+                height: 320px
         &__form
             display: grid
             grid-template-columns: repeat(2,1fr)
             column-gap: 15px
             row-gap: 15px
             &_error
-                height: 284px
-                row-gap: 10px
+                height: 264px
+                row-gap: 5px
         &__title
             grid-column: 1/3
             margin: 0
         &__input
             grid-column: 1/2
             margin: 0
+            &_error
+                padding: 15px 23px
+            &-group
+                height: 100%
         &__textarea
             grid-column: 2/3
             grid-row: 2/4
@@ -448,6 +464,13 @@
             display: none
     .invalid
         font-size: 12px
+    .modal-error
+        &_name
+            top: 65%
+        &_phone
+            top: 65%
+        &_email
+            top: 60%
 @media ( max-width: 619px )
     body
         padding-top: 72px
@@ -728,9 +751,6 @@
         &__dialog
             width: 95%
             padding: 33px 33px
-        &__textarea
-            &_error
-                height: 93px
         &__button-wrapper
             flex-direction: column-reverse
             align-items: start
@@ -740,6 +760,13 @@
             width: 100%
     .invalid
         font-size: 12px
+    .modal-error
+        &_name
+            top: 100%
+        &_phone
+            top: 100%
+        &_email
+            top: 100%
 @media ( max-width: 619px ) and (max-height: 500px) and (orientation: landscape)
     .modal
         &__dialog
@@ -754,8 +781,8 @@
             column-gap: 15px
             row-gap: 15px
             &_error
-                height: 254px
-                row-gap: 7px
+                height: 264px
+                row-gap: 5px
         &__title
             grid-column: 1/3
             margin: 0
@@ -765,6 +792,8 @@
             margin: 0
             &_error
                 padding: 15px 23px
+            &-group
+                height: 100%
         &__textarea
             grid-column: 2/3
             grid-row: 2/4
@@ -777,3 +806,10 @@
             width: 100%
         &__txt
             display: none
+    .modal-error
+        &_name
+            top: 65%
+        &_phone
+            top: 65%
+        &_email
+            top: 60%
