--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -60,6 +60,7 @@
         border-radius: 4px
         &-group
             width: 100%
+            position: relative
     &__textarea
         width: 100%
         height: 123px
