--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -33,8 +33,6 @@
     .subscribe
         display: flex
         position: relative
-        border-radius: 4px
-        overflow: hidden
         height: 55px
         &__input
             width: 350px
@@ -43,9 +41,10 @@
             font-size: 14px
             line-height: 18px
             border: none
+            border-radius: 4px
             background-color: #f5fafe
             color: $text-color
-        &__button 
+        &__button
             position: absolute
             width: 65px
             height: 100%
@@ -56,5 +55,6 @@
             line-height: 15px
             background-color: $primary
             border: 0
+            border-radius: 0 4px 4px 0
             color: $color-w
             cursor: pointer
