--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -144,6 +144,8 @@
                 border-radius: 4px
                 background-color: $primary
                 cursor: pointer
+                &:hover
+                    background-color: #A81833
     &-bottom
         display: grid
         grid-template-columns: 1fr 283px 1fr
