--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -18,7 +18,7 @@
         grid-template-rows: repeat(2, 1fr)
         height: 500px
         border-radius: 8px
-        overflow: hidden    
+        overflow: hidden
         &_big
             grid-column: 1/3
             display: grid
@@ -54,7 +54,7 @@
                     margin-right: 2px
                     &:last-child
                         margin-right: 0
-        &__title 
+        &__title
             margin: 0 0 29px
         &__description
             margin-bottom: 45px
@@ -120,6 +120,8 @@
             color: $color-w
             border-radius: 4px
             background-color: $primary
+            &:hover
+                background-color: #A81833
     .properties
         font-size: 0
         &__item
@@ -137,4 +139,3 @@
             font-size: 12px
             line-height: 15px
             color: $color-w
-    
