--- a/sass/blocks/_activities.sass
+++ b/sass/blocks/_activities.sass
@@ -29,12 +29,12 @@
             width: 100%
             height: 100%
             object-fit: cover
-            
+
         &__text
             position: absolute
             z-index: 20
             left: 26px
-            bottom: 30px    
+            bottom: 30px
             color: $color-w
         &__descr
             display: block
@@ -52,3 +52,5 @@
             color: inherit
             border-radius: 4px
             background-color: $primary
+            &:hover
+                background-color: #A81833
