--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,6 +1,6 @@
 .navbar
-    background-color: $color-w   
-    &-top 
+    background-color: $color-w
+    &-top
         display: flex
         justify-content: space-between
         align-items: center
@@ -9,7 +9,7 @@
             width: 177px
             &__image
                 max-width: 100%
-        .search 
+        .search
             display: flex
             position: relative
             border-radius: 6px
@@ -17,7 +17,7 @@
             height: 41px
             margin-left: 10%
             margin-right: auto
-            &__input 
+            &__input
                 width: 350px
                 padding: 0 75px 0 23px
                 font-size: 12px
@@ -25,7 +25,7 @@
                 border: none
                 background-color: #f5fafe
                 color: $text-color
-            &__button 
+            &__button
                 position: absolute
                 width: 65px
                 height: 100%
@@ -34,18 +34,20 @@
                 background-color: $primary
                 border: 0
                 cursor: pointer
+                &:hover
+                    background-color: #A81833
             &__icon
                 width: 16px
                 height: 16px
                 fill: $color-w
-        .user 
+        .user
             display: flex
             align-items: center
             font-size: 14px
             line-height: 18px
             text-decoration: none
             color: $text-color
-            &__avatar 
+            &__avatar
                 width: 40px
                 height: 40px
                 object-fit: cover
