--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -62,7 +62,7 @@
                     font-size: 10px
                     line-height: 13px
             .value
-                &:not(:last-child)               
+                &:not(:last-child)
                     &::after
                         content: "/"
     &-grid
@@ -114,7 +114,7 @@
     &-wrapper
         display: flex
         flex-direction: column
-        justify-content: space-between   
+        justify-content: space-between
         .booking-card
             display: flex
             flex-direction: column
@@ -169,6 +169,8 @@
                     align-items: center
                     text-decoration: none
                     color: inherit
+                    &:hover
+                        text-decoration: underline
                     &__icon
                         width: 14px
                         height: 14px
@@ -183,6 +185,8 @@
                 color: inherit
                 border-radius: 4px
                 background-color: $primary
+                &:hover
+                    background-color: #A81833
         .map
             width: 350px
             height: 210px
@@ -191,5 +195,4 @@
             &__item
                 width: 100%
                 height: 100%
-                border: 0 
-                
+                border: 0
