--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -58,3 +58,5 @@
             border-radius: 0 4px 4px 0
             color: $color-w
             cursor: pointer
+            &:hover
+                background-color: #A81833
