--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -195,6 +195,9 @@
         &__dialog
             width: 400px
             padding: 33px 66px
+        &__button
+            &:hover
+                background-color: $primary
     .invalid
         font-size: 14px
 @media ( max-width: 992px ) and (max-height: 500px) and (orientation: landscape)
