--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -88,6 +88,8 @@
         color: $color-w
         background-color: $primary
         cursor: pointer
+        &:hover
+            background-color: #A81833
     &__txt
         font-weight: 700
         font-size: 12px
