Fixed slider buttons

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -643,6 +643,7 @@
                 &_prev, &_next
                     width: 4px
                     height: 7px
+                    flex-shrink: 0
         &-wrapper
             flex-direction: column
             .booking-card
